--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Glass Morphism calculator</title>
 </head>
 <body>
+    <h1>Calculator</h1>
     <div class="container">
         <form class="calculator" name="calc">
             <input type="text" readonly class="value" name="text"/>
